# StoryToVideo

./: .env.cloud.example  .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0.md  deploy-server.sh  deploy-windows.ps1  deploy-wsl.sh  docker-compose.local.yml  docker-compose.server.yml  docker-compose.wsl.yml  docker-compose.yml  start-all.sh  start.sh
client/: ._README.md  CMakeLists.txt  README.md  StoryToVideoGenerator.pro  qml.qrc
client/12.2StoryToVideo/: ApiConfig.h  AssetsPage.qml  Assetsshow.qml  CreatePage.qml  NetworkManager.cpp  NetworkManager.h  PreviewPage.qml  ShotDetailPage.qml  StoryToVideoGenerator.pro  StoryboardPage.qml  ViewModel.cpp  ViewModel.h  main.cpp  main.qml  run.sh
client/qml/: AssetsPage.qml  Assetsshow.qml  main.qml
client/scripts/: deploy.sh  run.sh
client/src/: NetworkManager.h  ViewModel.h  datamanager.cpp  datamanager.h  main.cpp
docs/: API_DRAFT.md  ARCHITECTURE.md  CODING_STANDARD.md  FEISHU_MODEL_API.md  IOS_CLIENT_PLAN.md  MILESTONES.md  PRD.md  README.zh-CN.md  cleanup_walkthrough.md  deploy.md  ops.md  three-tier-startup-api.md  项目说明文档.md  飞书文档汇总.md
docs/delivery/: 交互设计文档.md  架构设计文档.md  需求文档.md  项目规划.md
docs/releases/: README.md  (+2 more)
frp/: README.md  frpc-visitor.toml  frpc.docker.toml  frpc.toml  frps.toml
gateway/: Dockerfile  __init__.py  main.py  requirements.txt
ios/: project.yml
mock-server/: ._main.py  main.py
model/: API.md  Dockerfile.cpu  README.md  requirements.txt
scripts/: cleanup.sh  package_mac_client.sh
server/: Dockerfile  go.mod  go.sum
(+69 files in other folders)
